# openvector

./: .gitignore  COPYING  LICENCE.md  README.md  build.sh  meson.build  tasks.json
TEMP/: neon_mult
include/: OVT.h  OVTUtils.h  OVTerror.h  OVTfasttype.h  OpenVecTor.hpp  PVCTR.h  PVCTRTsimd.h  PVCTRUtils.h  PVCTRerror.h  PVCTRext.h  PVCTRfasttype.h  PVCTRplatform.h
include/VT/: OVfasttype.hpp  OVplatform.h
include/internal/: OVTplatform.h  OVTsimd.h  PVCTRTsimd.h
src/: OVT.c  OVTUtils.c  OVTfasttype.c  OpenVecTor.cpp  pvctr_base.c  pvctr_context.c  pvctr_fasttype.c  pvctr_techniq.c  pvctr_utils.c
tests/: meson.build
tests/src/: tests.cpp
